style.css
/*  Color scheme based off http://colorhunt.co/c/4371
    #F0E9FF
    #CEA9FF
    #B346FF
    #290046
    #545454  */

@import url('https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i');
@import url(https://rawgit.com/jonsuh/hamburgers/master/dist/hamburgers.css) screen and (max-width: 574px);

@font-face {
    font-family: Lombok;
    src: url('fonts/lombok.otf');
}
/*
Solution to Safari iOS font rendering, based off:
https://css-tricks.com/forums/topic/weird-mobile-safari-font-face-problem-font-doubled-and-offset-to-the-left/
*/
@font-face {
    font-family: Lombok;
    src: url('fonts/lombok.otf');
    font-weight: bold;
}
.noselect {
    -webkit-touch-callout: none;
    /* iOS Safari */
    -webkit-user-select: none;
    /* Safari */
    -khtml-user-select: none;
    /* Konqueror HTML */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

*:focus {
    outline: none;
}

body {
    margin-top: 60px !important;
    background-color: white !important;
    display: block !important;
    margin: 0;
    color: #32424A;
    font-family: 'Muli', sans-serif;
    font-weight: 400;
    text-align: center;
}

/* .logo a {
    text-decoration: none;
}

.logo img {
    display: none;
    width: 31.25rem;
    max-width: 100vw;
    height: 100vh;
}

body.home .logo img {
    display: initial;
}

.logo h1 {
    width: 100%;
    color: #545454;
    text-align: center;
    font-size: 4rem;
    font-family: Lombok;
    line-height: 30vh;
    height: 30vh;
    margin-top: 60px;
    margin-bottom: 0;
}

.logo h1 .num {
    font-family: Montserrat;
}

.logo h1 br {
    display: none;
}

body.home .logo h1 {
    position: absolute;
    top: 70vh;
    line-height: initial;
    height: initial;
}

body.not-found .logo h1 {
    margin: 0;
    margin-top: 60px;
    height: calc(100vh - 60px);
    line-height: calc(100vh - 60px);
}


@media screen and (max-width: 463px) {
    .logo h1 {
        font-size: 3rem;
    }
} */

.info {
    
}

.info h2 {
    display: inline-block;
}

header {
    /* color: #cea8fa;
    background-color: #32424A; */
    color: #32424A;
    font-weight: bold;
    padding: 1px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    height: 60px;
    line-height: 60px;
    padding: 0;
    display: flex;
}

header nav {
    width: 100%;
}

header nav ul {
    margin: 0;
    padding: 0;
    height: 60px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

header nav li {
    box-sizing: border-box;
    padding: 10px;
    overflow: hidden;
    transition: width, 1s;
}

header nav a {
    color: inherit;
    text-decoration: none;
}

header nav a span {
    margin-left: 0.5em;
}

header nav {
    margin: 0;
}

header .logo {
    display: flex;
    text-decoration: none;
    color: inherit;
}

header .logo h2 {
    margin: 0;
    margin-left: 1em;
    line-height: inherit;
    color: inherit;
}

header .logo img {
    height: 60px;
    filter: drop-shadow(0 0 7px white);
}

header .hamburger {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    line-height: 100%;
    margin: 0;
    padding: 17px;
    z-index: 5;
}

.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
    background-color: #32424A !important;
}

@media screen and (max-width: 1087px) {
    header img {
        display: none;
    }
    header h2 {
        left: 0;
    }
}

@media screen and (max-width: 997px) {
    header img {
        display: initial;
    }
    header h2 {
        display: none;
    }
}

@media screen and (max-width: 662px) {
    header img {
        display: none;
    }
    header h2 {
        display: none;
    }
}

/* IF ADDING MORE LINKS TO THE NAV THEN CHANGE THE QUERY SIZES!!! */
@media screen and (max-width: 537px) {
    /* .logo h1 br {
        display: initial;
    }
    body.not-found .logo h1 {
        line-height: initial;
        margin-top: calc((100vh - 60px) / 2);
        height: calc(100vh - calc((100vh - 60px) / 2));
    } */
    header img {
        display: none;
    }
    header .logo h2 {
        display: initial;
        width: 100vw;
        text-align: center;
        left: 0;
        margin-left: 0;
    }
    header .hamburger {
        display: initial;
    }
    header nav {
        /* margin-top: calc(-100vh + 60px); SWAP WITH LINE BELOW IF WANT TO HAVE DROP-DOWN EFFECT*/
        margin-top: 60px;
        transition: all,.5s;
        background-color: #b346ff;
        /* box-shadow: inset 0 0 4rem -0.5rem black; CHANGED DIFFERENTIATOR TO BORDER */
        border-top: 2px solid white;
        width: 100vw;
        height: calc(100vh - 60px);
        text-align: center !important;
        line-height: 5em;
        overflow-y: scroll;
        font-size: 1.5em;
        background-color: #32424a;
        position: fixed;
        opacity: 0;
        pointer-events: none;
    }
    header nav ul {
        display: block !important;
        margin: 0 !important;
        padding: 0 !important;
        list-style: none !important;
        text-align: center !important;
        color: #cea9ff !important;
    }
    header nav li {
        padding: initial !important;
        display: list-item !important;
    }
    body {
        overflow: scroll;
    }
    body.nav-out {
        overflow: hidden;
    }
    body.nav-out header nav {
        opacity: 1;
        margin-top: 60px;
        pointer-events: auto;
    }
    .content {
        margin: 0 !important;
        border-radius: 0 !important;
    }
    .back-to-top {
        margin-top: 0 !important;
    }
    .main-content-list.fullwidth-feature-items .item {
        min-height: unset !important;
        padding: 2rem !important;
    }
    .quicklinks li {
        width: 100%;
    }
}
/* ... */

